# chordht

./: Cargo.toml  README.md  mkslides.yml  report.md  run_demo.sh  slides.md  style.css
chord_client/: Cargo.toml
chord_client/src/: main.rs
chord_monitor/: Cargo.toml
chord_monitor/frontend/: package-lock.json  package.json
chord_monitor/frontend/src/: App.css  App.jsx  ChordRing.jsx  Controls.jsx  NodeDetailsModal.css  NodeDetailsModal.jsx  api.js
chord_monitor/src/: main.rs
chord_node/: Cargo.toml
chord_node/benchmark_results/: analysis.md  raw_output.txt
chord_node/scripts/: visualize_benchmarks.py
chord_node/src/: constants.rs  lib.rs  main.rs  node.rs
chord_node/tests/: benchmarks.rs  integration_test.rs  join_after_failure_test.rs  key_transfer_test.rs  large_ring_test.rs  real_world.rs  replication_test.rs  reproduce_join_failure.rs
chord_node/tests/common/: mod.rs
chord_proto/: Cargo.toml  build.rs
chord_proto/proto/: chord.proto
chord_proto/src/: lib.rs
