[package]
name = "chord_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chord_proto = { path = "../chord_proto" }
tonic = "0.12"
prost = "0.13"
rand = "0.8"
