[package]
name = "chord_node"
version = "0.1.0"
edition = "2021"

[dependencies]
chord_proto = { path = "../chord_proto" }
tokio = { version = "1.40", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
tokio-stream = "0.1.17"
